tests/dataset/tpc-ds/compiler/c/q17.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static int contains_list_string(list_string v, char *item) {
  for (int i = 0; i < v.len; i++)
    if (strcmp(v.data[i], item) == 0)
      return 1;
  return 0;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct StoreSale StoreSale;
typedef struct StoreReturn StoreReturn;
typedef struct CatalogSale CatalogSale;
typedef struct DateDim DateDim;
typedef struct Store Store;
typedef struct Item Item;

typedef struct {
  const char *i_item_id;
  const char *i_item_desc;
  const char *s_state;
  int store_sales_quantitycount;
  double store_sales_quantityave;
  double store_sales_quantitystdev;
  double store_sales_quantitycov;
  int store_returns_quantitycount;
  double store_returns_quantityave;
  double store_returns_quantitystdev;
  double store_returns_quantitycov;
  int catalog_sales_quantitycount;
  double catalog_sales_quantityave;
  double catalog_sales_quantitystdev;
  double catalog_sales_quantitycov;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_sold_date_sk;
  int ss_item_sk;
  int ss_customer_sk;
  int ss_ticket_number;
  int ss_quantity;
  int ss_store_sk;
} store_sale_t;

typedef struct {
  int sr_returned_date_sk;
  int sr_customer_sk;
  int sr_item_sk;
  int sr_ticket_number;
  int sr_return_quantity;
} store_return_t;

typedef struct {
  int cs_sold_date_sk;
  int cs_item_sk;
  int cs_bill_customer_sk;
  int cs_quantity;
} catalog_sale_t;

typedef struct {
  int d_date_sk;
  const char *d_quarter_name;
} date_dim_t;

typedef struct {
  int s_store_sk;
  const char *s_state;
} store_t;

typedef struct {
  int i_item_sk;
  const char *i_item_id;
  const char *i_item_desc;
} item_t;

typedef struct {
  int qty;
  int ret;
  int csq;
  const char *i_item_id;
  const char *i_item_desc;
  const char *s_state;
} joined_item_t;
typedef struct {
  int len;
  joined_item_t *data;
} joined_item_list_t;
joined_item_list_t create_joined_item_list(int len) {
  joined_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(joined_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_id;
  int i_item_desc;
  int s_state;
  int store_sales_quantitycount;
  double store_sales_quantityave;
  double store_sales_quantitystdev;
  double store_sales_quantitycov;
  int store_returns_quantitycount;
  double store_returns_quantityave;
  double store_returns_quantitystdev;
  double store_returns_quantitycov;
  int catalog_sales_quantitycount;
  double catalog_sales_quantityave;
  double catalog_sales_quantitystdev;
  double catalog_sales_quantitycov;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreSale {
  int ss_sold_date_sk;
  int ss_item_sk;
  int ss_customer_sk;
  int ss_ticket_number;
  int ss_quantity;
  int ss_store_sk;
} StoreSale;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct StoreReturn {
  int sr_returned_date_sk;
  int sr_customer_sk;
  int sr_item_sk;
  int sr_ticket_number;
  int sr_return_quantity;
} StoreReturn;
typedef struct {
  int len;
  store_return_t *data;
} store_return_list_t;
store_return_list_t create_store_return_list(int len) {
  store_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CatalogSale {
  int cs_sold_date_sk;
  int cs_item_sk;
  int cs_bill_customer_sk;
  int cs_quantity;
} CatalogSale;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct DateDim {
  int d_date_sk;
  char *d_quarter_name;
} DateDim;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Store {
  int s_store_sk;
  char *s_state;
} Store;
typedef struct {
  int len;
  store_t *data;
} store_list_t;
store_list_t create_store_list(int len) {
  store_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Item {
  int i_item_sk;
  char *i_item_id;
  char *i_item_desc;
} Item;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q17_stats_result;
static void test_TPCDS_Q17_stats() {
  tmp1_t tmp1[] = {(tmp1_t){.i_item_id = "I1",
                            .i_item_desc = "Item 1",
                            .s_state = "CA",
                            .store_sales_quantitycount = 1,
                            .store_sales_quantityave = 10.0,
                            .store_sales_quantitystdev = 0.0,
                            .store_sales_quantitycov = 0.0,
                            .store_returns_quantitycount = 1,
                            .store_returns_quantityave = 2.0,
                            .store_returns_quantitystdev = 0.0,
                            .store_returns_quantitycov = 0.0,
                            .catalog_sales_quantitycount = 1,
                            .catalog_sales_quantityave = 5.0,
                            .catalog_sales_quantitystdev = 0.0,
                            .catalog_sales_quantitycov = 0.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q17_stats_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q17_stats_result.len; i3++) {
      if (test_TPCDS_Q17_stats_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {(store_sale_t){.ss_sold_date_sk = 1,
                                               .ss_item_sk = 1,
                                               .ss_customer_sk = 1,
                                               .ss_ticket_number = 1,
                                               .ss_quantity = 10,
                                               .ss_store_sk = 1}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  store_return_t store_returns[] = {(store_return_t){.sr_returned_date_sk = 2,
                                                     .sr_customer_sk = 1,
                                                     .sr_item_sk = 1,
                                                     .sr_ticket_number = 1,
                                                     .sr_return_quantity = 2}};
  int store_returns_len = sizeof(store_returns) / sizeof(store_returns[0]);
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.cs_sold_date_sk = 3,
                                                     .cs_item_sk = 1,
                                                     .cs_bill_customer_sk = 1,
                                                     .cs_quantity = 5}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_quarter_name = "1998Q1"},
      (date_dim_t){.d_date_sk = 2, .d_quarter_name = "1998Q2"},
      (date_dim_t){.d_date_sk = 3, .d_quarter_name = "1998Q3"}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  store_t store[] = {(store_t){.s_store_sk = 1, .s_state = "CA"}};
  int store_len = sizeof(store) / sizeof(store[0]);
  item_t item[] = {
      (item_t){.i_item_sk = 1, .i_item_id = "I1", .i_item_desc = "Item 1"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  list_string joined = list_string_create(3);
  joined.data[0] = "1998Q1";
  joined.data[1] = "1998Q2";
  joined.data[2] = "1998Q3";
  list_string joined = list_string_create(3);
  joined.data[0] = "1998Q1";
  joined.data[1] = "1998Q2";
  joined.data[2] = "1998Q3";
  joined_item_list_t tmp4 = joined_item_list_t_create(
      store_sales.len * store_returns.len * catalog_sales.len * date_dim.len *
      date_dim.len * date_dim.len * store.len * item.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < store_sales_len; tmp6++) {
    store_sale_t ss = store_sales[tmp6];
    for (int tmp7 = 0; tmp7 < store_returns_len; tmp7++) {
      store_return_t sr = store_returns[tmp7];
      if (!(ss.ss_customer_sk == sr.sr_customer_sk &&
            ss.ss_item_sk == sr.sr_item_sk &&
            ss.ss_ticket_number == sr.sr_ticket_number)) {
        continue;
      }
      for (int tmp8 = 0; tmp8 < catalog_sales_len; tmp8++) {
        catalog_sale_t cs = catalog_sales[tmp8];
        if (!(sr.sr_customer_sk == cs.cs_bill_customer_sk &&
              sr.sr_item_sk == cs.cs_item_sk)) {
          continue;
        }
        for (int tmp9 = 0; tmp9 < date_dim_len; tmp9++) {
          date_dim_t d1 = date_dim[tmp9];
          if (!(ss.ss_sold_date_sk == d1.d_date_sk &&
                d1.d_quarter_name == "1998Q1")) {
            continue;
          }
          for (int tmp10 = 0; tmp10 < date_dim_len; tmp10++) {
            date_dim_t d2 = date_dim[tmp10];
            if (!(contains_list_string(joined,
                                       sr.sr_returned_date_sk == d2.d_date_sk &&
                                           d2.d_quarter_name))) {
              continue;
            }
            for (int tmp11 = 0; tmp11 < date_dim_len; tmp11++) {
              date_dim_t d3 = date_dim[tmp11];
              if (!(contains_list_string(joined,
                                         cs.cs_sold_date_sk == d3.d_date_sk &&
                                             d3.d_quarter_name))) {
                continue;
              }
              for (int tmp12 = 0; tmp12 < store_len; tmp12++) {
                store_t s = store[tmp12];
                if (!(ss.ss_store_sk == s.s_store_sk)) {
                  continue;
                }
                for (int tmp13 = 0; tmp13 < item_len; tmp13++) {
                  item_t i = item[tmp13];
                  if (!(ss.ss_item_sk == i.i_item_sk)) {
                    continue;
                  }
                  tmp4.data[tmp5] =
                      (joined_item_t){.qty = ss.ss_quantity,
                                      .ret = sr.sr_return_quantity,
                                      .csq = cs.cs_quantity,
                                      .i_item_id = i.i_item_id,
                                      .i_item_desc = i.i_item_desc,
                                      .s_state = s.s_state};
                  tmp5++;
                }
              }
            }
          }
        }
      }
    }
  }
  tmp4.len = tmp5;
  joined_item_list_t joined = tmp4;
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i14 = 0; i14 < result.len; i14++) {
    if (i14 > 0)
      printf(",");
    result_item_t it = result.data[i14];
    printf("{");
    _json_string("i_item_id");
    printf(":");
    _json_int(it.i_item_id);
    printf(",");
    _json_string("i_item_desc");
    printf(":");
    _json_int(it.i_item_desc);
    printf(",");
    _json_string("s_state");
    printf(":");
    _json_int(it.s_state);
    printf(",");
    _json_string("store_sales_quantitycount");
    printf(":");
    _json_int(it.store_sales_quantitycount);
    printf(",");
    _json_string("store_sales_quantityave");
    printf(":");
    _json_float(it.store_sales_quantityave);
    printf(",");
    _json_string("store_sales_quantitystdev");
    printf(":");
    _json_float(it.store_sales_quantitystdev);
    printf(",");
    _json_string("store_sales_quantitycov");
    printf(":");
    _json_float(it.store_sales_quantitycov);
    printf(",");
    _json_string("store_returns_quantitycount");
    printf(":");
    _json_int(it.store_returns_quantitycount);
    printf(",");
    _json_string("store_returns_quantityave");
    printf(":");
    _json_float(it.store_returns_quantityave);
    printf(",");
    _json_string("store_returns_quantitystdev");
    printf(":");
    _json_float(it.store_returns_quantitystdev);
    printf(",");
    _json_string("store_returns_quantitycov");
    printf(":");
    _json_float(it.store_returns_quantitycov);
    printf(",");
    _json_string("catalog_sales_quantitycount");
    printf(":");
    _json_int(it.catalog_sales_quantitycount);
    printf(",");
    _json_string("catalog_sales_quantityave");
    printf(":");
    _json_float(it.catalog_sales_quantityave);
    printf(",");
    _json_string("catalog_sales_quantitystdev");
    printf(":");
    _json_float(it.catalog_sales_quantitystdev);
    printf(",");
    _json_string("catalog_sales_quantitycov");
    printf(":");
    _json_float(it.catalog_sales_quantitycov);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q17_stats_result = result;
  test_TPCDS_Q17_stats();
  return 0;
}
